[gd_scene load_steps=6 format=3 uid="uid://dn6dtl61jqkp7"]

[ext_resource type="Script" path="res://scripts/PipePair.gd" id="1_7t6gd"]
[ext_resource type="Texture2D" uid="uid://4r003n4eivr3" path="res://assets/graphics/pipe-green-ditherlicious.png" id="2_sj71f"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_c82hw"]
size = Vector2(44, 4858)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a6abf"]
size = Vector2(44, 472)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_imfgu"]
size = Vector2(11, 1312)

[node name="PipePair" type="Node2D"]
script = ExtResource("1_7t6gd")

[node name="TopPipe" type="Area2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="TopPipe"]
position = Vector2(0, -300)
texture = ExtResource("2_sj71f")

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopPipe"]
position = Vector2(0, -2493)
shape = SubResource("RectangleShape2D_c82hw")

[node name="BottomPipe" type="Area2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="BottomPipe"]
position = Vector2(0, 300)
texture = ExtResource("2_sj71f")

[node name="CollisionShape2D" type="CollisionShape2D" parent="BottomPipe"]
position = Vector2(0, 300)
shape = SubResource("RectangleShape2D_a6abf")

[node name="Scored" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Scored"]
position = Vector2(30, -122)
shape = SubResource("RectangleShape2D_imfgu")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[connection signal="body_entered" from="TopPipe" to="." method="_on_body_entered"]
[connection signal="body_entered" from="BottomPipe" to="." method="_on_body_entered"]
[connection signal="body_entered" from="Scored" to="." method="_on_point_scored"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
